# options-volatility-trading-strats

./: .gitignore  README.md  base_strat.py  delta_neutral.py  dispersion.py  estimators.py  margin_calculator.py  market_sim.py  pricer.py  pyproject.toml  requirements.txt  vol_arb.py
backtest/: dispersion_adapter.py  engine.py  margin_calculator.py  market_sim.py  single_underlying_adapter.py
core/: estimators.py  pricer.py  surface.py
data/: historical_db.py  websocket_client.py
strategies/: base_strat.py  delta_neutral.py  dispersion.py  surface_trading.py  vol_arb.py
tests/: test_chain.py  test_core.py  test_dispersion.py  test_dispersion_adapter.py  test_engine.py  test_margin_calculator.py  test_market_sim.py  test_single_underlying_adapter.py  test_strategies.py  test_svi_calendar.py
